30-cloud/immich/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: cloud
  labels:
    app: immich-server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release
          ports:
            - name: http
              containerPort: 2283
          volumeMounts:
            - name: library
              mountPath: /data
      volumes:
        - name: library
          hostPath:
            path: /tank/data/immich
            type: DirectoryOrCreate
