30-cloud/immich/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-db
  namespace: cloud
  labels:
    app: immich-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-db
  template:
    metadata:
      labels:
        app: immich-db
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: immich-db
---
apiVersion: v1
kind: Service
metadata:
  name: immich-db
  namespace: cloud
spec:
  selector:
    app: immich-db
  ports:
    - port: 5432
      targetPort: 5432
