30-cloud/immich/machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-ml
  namespace: cloud
  labels:
    app: immich-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-ml
  template:
    metadata:
      labels:
        app: immich-ml
    spec:
      containers:
        - name: immich-ml
          image: ghcr.io/immich-app/immich-machine-learning:release
          ports:
            - name: http
              containerPort: 3003
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          hostPath:
            path: /tank/app/immich
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: cloud
spec:
  selector:
    app: immich-ml
  ports:
    - port: 3003
      targetPort: 3003
