30-cloud/immich/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: cloud
  labels:
    app: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: redis
          image: docker.io/valkey/valkey:8-bookworm
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: cloud
spec:
  selector:
    app: immich-redis
  ports:
    - port: 6379
      targetPort: 6379
